--- a/.env
+++ b/.env
@@ -1,8 +1,3 @@
-# 키움 API 정보
-APP_KEY=c81bP7p05N1Omc448HcjJ1i15JE2_aUIkaRfhx3htQE
-APP_SECRET=Vtc8PXW0-FJAxmdnLU1ftGvRZEDzhb13Ky64IOfxoow
-APP_KEY_2=GOpzdhUS4fdwKPBr4KwjpY6goj7-Aow66ifvUDCIXlw
-APP_SECRET_2=bBuq_GhYqlsagHg8xCVWd23LW3fwFu2XwKWUK3pBTYs
 
 WS_URI=wss://api.kiwoom.com:10000/api/dostk/websocket
 BASE_URL=https://openapivts.koreainvestment.com:29443
@@ -21,4 +16,10 @@ GEMINI_API_KEY=AIzaSyD-CbpQxNoeFLBQMxPNR5yCwYhEsdKSNCs
 # 브로커 설정
 BROKER_VENDOR=kiwoom
 BROKER_BASE_URL_KIWOOM=https://api.kiwoom.com
-KIWOOM_ACCOUNTS_JSON=[{"token": "iVUtSMunLuKLSPH1DEw-0VC0Y3vJU1yO94tp75zB0eOx_vIZn1J7WnYkyxXPPuw3DS6N7dYLZ6vrTRkElarxiQ", "acc_no": "5822", "enabled": true, "alias": "5822"}, {"token": "VbuCDyGYt0MZCma6hRGVHTOK7uo_eDNP_1NdB24C_RFxaiVfUoRaDVTnUZkfpyUBuwJJ0_T3Vs_0qmPyEKYTqQ", "acc_no": "3133", "enabled": true, "alias": "3133"}]
+KIWOOM_ACCOUNTS_JSON='[{"token": "K0OT0lTwUuu6jqoq5Y_LyXftl_iovE8TlUgaITKuGDgQoj_aax4WGBY_XyXihudY6jrL26lMYMmQw6Xv0Aw_6w", "acc_no": "5822", "enabled": true, "alias": "5822"}, {"token": "rsfIR5Nk6KOdN6ExCCxaTWEN317Wm-t0c-l3ugu1kaW7WulPr894pRvG0wW7PPAEYK8l-HAvj_8Z-ufkR6I7pg", "acc_no": "3133", "enabled": true, "alias": "3133"}]'
+APP_KEY='c81bP7p05N1Omc448HcjJ1i15JE2_aUIkaRfhx3htQE'
+APP_SECRET='Vtc8PXW0-FJAxmdnLU1ftGvRZEDzhb13Ky64IOfxoow'
+APP_KEY_1='c81bP7p05N1Omc448HcjJ1i15JE2_aUIkaRfhx3htQE'
+APP_SECRET_1='Vtc8PXW0-FJAxmdnLU1ftGvRZEDzhb13Ky64IOfxoow'
+APP_KEY_2='GOpzdhUS4fdwKPBr4KwjpY6goj7-Aow66ifvUDCIXlw'
+APP_SECRET_2='bBuq_GhYqlsagHg8xCVWd23LW3fwFu2XwKWUK3pBTYs'
