--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ GEMINI_API_KEY=AIzaSyD-CbpQxNoeFLBQMxPNR5yCwYhEsdKSNCs
 # 브로커 설정
 BROKER_VENDOR=kiwoom
 BROKER_BASE_URL_KIWOOM=https://api.kiwoom.com
-KIWOOM_ACCOUNTS_JSON='[{"token": "K0OT0lTwUuu6jqoq5Y_LyXftl_iovE8TlUgaITKuGDgQoj_aax4WGBY_XyXihudY6jrL26lMYMmQw6Xv0Aw_6w", "acc_no": "5822", "enabled": true, "alias": "5822"}, {"token": "rsfIR5Nk6KOdN6ExCCxaTWEN317Wm-t0c-l3ugu1kaW7WulPr894pRvG0wW7PPAEYK8l-HAvj_8Z-ufkR6I7pg", "acc_no": "3133", "enabled": true, "alias": "3133"}]'
+KIWOOM_ACCOUNTS_JSON='[{"token": "rsfIR5Nk6KOdN6ExCCxaTWEN317Wm-t0c-l3ugu1kaW7WulPr894pRvG0wW7PPAEYK8l-HAvj_8Z-ufkR6I7pg", "acc_no": "3133", "enabled": true, "alias": "3133"}, {"token": "K0OT0lTwUuu6jqoq5Y_LyXftl_iovE8TlUgaITKuGDgQoj_aax4WGBY_XyXihudY6jrL26lMYMmQw6Xv0Aw_6w", "acc_no": "5822", "enabled": true, "alias": "5822"}, {"token": "K0OT0lTwUuu6jqoq5Y_LyXftl_iovE8TlUgaITKuGDgQoj_aax4WGBY_XyXihudY6jrL26lMYMmQw6Xv0Aw_6w", "acc_no": "unknown", "enabled": true, "alias": "unknown"}]'
 APP_KEY='c81bP7p05N1Omc448HcjJ1i15JE2_aUIkaRfhx3htQE'
 APP_SECRET='Vtc8PXW0-FJAxmdnLU1ftGvRZEDzhb13Ky64IOfxoow'
 APP_KEY_1='c81bP7p05N1Omc448HcjJ1i15JE2_aUIkaRfhx3htQE'
